src/pages/zh/v1.18.0/using-or/next.mdx
---
title: "在 Next.js 中使用 OpenReplay"
metaTitle: "将 OpenReplay Tracker 添加到您的 Next.js 应用中"
metaDescription: "了解如何让 tracker 在您的 Next.js 应用中正常运行"
---
让 tracker 在 Next.js 应用中运行起来相当简单。由于 Next.js 构建在 React 之上，因此整个过程非常相似，主要的难点来自 Next.js 的服务端渲染（Server Side Rendering）能力。

但一旦您理解了它们的工作原理以及如何组织您的纯客户端代码，您很快就能开始追踪您的用户。

## 添加追踪代码

虽然您在创建新项目时可以直接从平台获取一份可复制粘贴的代码版本，但这段代码过于简陋，可能不符合您的团队或公司所期望的最佳实践。

### Tracker 组件

此方法提供了一种极简的方式，我们将 tracker 作为组件注入到应用中，该组件会动态加载该库。
 
#### App Router (v14+) - use client

```jsx
'use client'
import {useEffect} from "react"
import Tracker from '@openreplay/tracker'

const tracker = new Tracker({
  projectKey: "",
  ingestPoint: "",
})

const Openreplay = () => {
  useEffect(() => {
    if (typeof window !== 'undefined') {
      tracker.start()
    }
  }, [])

  return null
}

export default Openreplay 
```

#### 常规组件（Next v13 及更早版本）

```jsx
[...]

function TrackerComponent() {
const [tracker, setTracker] = React.useState(null);

  React.useEffect(() => {
    (async function () {
      const Tracker = await import("@openreplay/tracker");
      const openRelayTracker = new Tracker.default({
        projectKey: PROJECT_KEY,
        __DISABLE_SECURE_MODE: true,
      });

      setTracker(openRelayTracker);
    })();
  }, []);
[...]
```

### Tracker Context

此方法允许您创建一个 context，进而更方便地控制 tracker 的状态并调用其各种 API。

```jsx
import { createContext } from "react"
import {v4 as uuidV4} from 'uuid'
import { useReducer } from "react"

export const TrackerContext = createContext()

function defaultGetUserId() {
   return uuidV4() 
}

async function newTracker(config) {
    // we use dynamic import to make sure that tracker is started inside browser env
    const Tracker = await import("@openreplay/tracker");
    const getUserId = (config?.userIdEnabled && config?.getUserId) ? config.getUserId : defaultGetUserId
    let userId = null;

    const trackerConfig = {
        projectKey: config?.projectKey || process.env.NEXT_PUBLIC_OPENREPLAY_PROJECT_KEY
    }

    const tracker = new Tracker(trackerConfig);
    
    if(config?.userIdEnabled) {
        userId = getUserId()
        tracker.setUserID(userId)
    }
    return tracker

}

function reducer(state, action) {
        switch(action.type) {
            case 'init': {
                if(!state.tracker) {
                    console.log("Instantiaing the tracker for the first time...")
                    return {...state, tracker: newTracker(state.config)}
                }
                return state
            }
            case 'start': {
                console.log("Starting tracker...")
                state.tracker.start()
                return state
            }
        }
    }

export default function TrackerProvider({children, config = {}}) {
    let [state, dispatch] = useReducer(reducer, {tracker: null, config})
    let value = {
        startTracking: () => dispatch({type: 'start'}),
        initTracker: () => dispatch({type: 'init'})
    }

    return <TrackerContext.Provider value={value}>{children}</TrackerContext.Provider>
}
```

该 provider 向用户提供了 2 个方法：

- `initTracker`：使用所提供的配置实例化 tracker。
- `startTracking`：触发追踪过程的启动。

该 provider 还接受一个“配置”对象，您可以为将来的功能进行扩展。本示例向您展示了如何（可选地）启用唯一标识用户的能力。您可以使用默认的 UUID，它对于每位用户每次访问页面时都是唯一的。您也可以在配置中提供一个自定义的 `getUserId` 函数。 

通过您的自定义函数，您可以提供您商店的客户 ID、用户的电子邮件地址，或任何能在您应用中唯一标识该用户的信息。这样，万一他们遇到了其他人没有反馈的特定问题，您就可以跨时间追踪他们的 session replays。

💡**给 self-hosted 用户的提示**：如果您使用的是 OpenReplay 的 self-hosted 版本，您还需要指定 `ingestPoint` 配置属性。该属性指定了 tracker 数据的接收端点（ingestion endpoint）。Cloud 用户无需此项，因为默认情况下 tracker 已经知道该端点的 SaaS 版本所在位置，但如果您自行托管，则需要指定它（它应该类似于 `https://openreplay.mydomain.com/ingest`） 

### 在代码中处理 "projectKey"

请注意，您所配置的 `projectKey` 是由 OpenReplay 平台提供的。出于安全原因，该值不应硬编码（hardcoded）存储在您的代码中，而应存放在某种配置文件/系统中。

在本示例中，我利用了 Next 的 `.env` 文件。您需要理解的是，如果您不为环境变量加上 `NEXT_PUBLIC` 前缀，您的客户端代码（即 tracker）将无法访问它。 

如果这种方式无法接受，您可以在用户访问的第一个页面中使用 `getStaticProps`，在实例化 tracker 之前获取该值。您可以在下方查看这两种示例。

## 使用 tracker context

按如下方式导入并使用我们之前创建的 `TrackerProvider` 包裹您的应用：

```jsx
import '../styles/globals.css'
import TrackerProvider from '../context/trackerContext'

function MyApp({ Component, pageProps }) {

  return <TrackerProvider>
        <Component {...pageProps} />
    </TrackerProvider>
}

export default MyApp
```

这是 `_app.js` 文件，它充当整个应用的入口点。  

然后，您可以从任意您希望的组件中触发追踪，如下所示：

```jsx
import { useContext, useEffect } from 'react'
import { TrackerContext } from '../context/trackerContext'
import styles from '../styles/Home.module.css'

export default function YourComponent({projectKey}) {
    
    const {initTracker, startTracking} = useContext(TrackerContext)
    
    useEffect( () => {
       initTracker()
       startTracking()
    }, [])
//.... rest of your code
}
```

如果您不需要这么多的控制，您可以将两者合并，即把“初始化消息”和“开始追踪消息”合在一起，这样您只需调用一个函数就能开始追踪。

## 有疑问吗？

要查看一个可运行的基于 Next 的应用的**完整代码**，您可以查看[此仓库](https://github.com/deleteman/openreplay-next-example)。

如果您在基于 Next 的项目中设置 tracker 时遇到任何问题，请通过我们的 [Slack 社区](https://slack.openreplay.com/) 联系我们，直接向我们的开发人员提问！
